--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -330,7 +330,7 @@ h6 {
     left: 50%;
     display: inline-block;
     margin-top: 18px;
-    padding: 9px 31px;
+    padding: 10px 31px;
     color: white;
     font-size: 15px;
     text-decoration: none;
@@ -1709,6 +1709,19 @@ h6 {
 
   .pricing {
     padding: 0 50px;
+
+    &__content {
+      flex-direction: row;
+    }
+
+    &__column {
+      margin-top: 34px;
+      margin-right: 15px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
   }
 
   .saying {
@@ -1786,7 +1799,7 @@ h6 {
 
     &__inner {
       flex-direction: row;
-      margin-top: 110px;
+      margin-top: 83px;
       padding: 0 150px;
     }
 
@@ -1806,6 +1819,7 @@ h6 {
 
     &__subtitle {
       width: 95%;
+      margin-top: 9px;
       padding: 0;
       font-size: 35px;
       line-height: 130%;
@@ -1813,14 +1827,16 @@ h6 {
       text-align: left;
 
       &::after {
-        margin-top: 33px;
+        margin-top: 31px;
         margin-left: 7px;
         content: "";
       }
     }
 
     &__desc {
+      display: inline-block;
       width: 90%;
+      margin-top: 3px;
       padding: 0;
       text-align: left;
     }
@@ -1834,7 +1850,7 @@ h6 {
       position: absolute;
       right: 0;
       width: 360px;
-      margin-top: 30px;
+      margin-top: 57px;
 
       &_title {
         font-size: 20px;
@@ -1950,6 +1966,10 @@ h6 {
       width: 55%;
     }
 
+    &__item {
+      font-size: 14px;
+    }
+
     &__img {
       display: inline-block;
       margin-top: 24px;
@@ -1959,13 +1979,14 @@ h6 {
 
   .sub-list {
     &__inner {
-      margin: 110px 0 120px 0;
+      margin: 80px 0 120px 0;
       padding: 0 150px;
     }
 
     &__img {
       width: 454px;
       height: 300px;
+      margin-top: 48px;
       box-shadow: 0px 8px 10px 6px rgba(black, 0.3);
     }
 
@@ -1976,6 +1997,14 @@ h6 {
 
   .standart {
     padding: 0 125px 0 150px;
+
+    &__title {
+      text-align: left;
+
+      &:after {
+        margin: 24px 0 0 0;
+      }
+    }
 
     &__par {
       width: 84%;
@@ -1999,13 +2028,101 @@ h6 {
 
   .pricing {
     padding: 0 143px;
+
+    &__inner {
+      margin-top: 102px;
+    }
+
+    &__title {
+      &::after {
+        margin-top: 22px;
+      }
+    }
+
+    &__column {
+      width: calc(33.3333% - 25px);
+      margin-top: 99px;
+      margin-right: 30px;
+
+      &:nth-child(2) {
+        margin-top: 65px;
+      }
+    }
+
+    &__item {
+      transform: translateY(-2px);
+
+      &:first-child {
+        border-top: 0;
+      }
+    }
   }
 
   .saying {
     padding: 0 170px;
 
+    &__inner {
+      margin-top: 161px;
+    }
+
+    &__title {
+      transform: translate(0px, 3px);
+
+      &::after {
+        margin-top: 22px;
+        transform: translateX(2px);
+      }
+    }
+
+    &__subtitle {
+      margin-top: 30px;
+    }
+
+    &__content {
+      margin-top: 53px;
+    }
+
     &__column {
       width: calc(33.3333% - 80px);
+    }
+
+    &__name {
+      transform: translate(6px, -6px);
+    }
+
+    &__position {
+      transform: translate(0px, -4px);
+    }
+  }
+
+  .contact {
+    &__inner {
+      margin-bottom: 0px;
+    }
+
+    &__title {
+      &::after {
+        transform: translate(0, -2px);
+      }
+    }
+
+    &__subtitle {
+      margin-top: 22px;
+      transform: translateX(2px);
+    }
+
+    &__area {
+      height: 100%;
+      font-size: 15.5px;
+    }
+
+    &__btn {
+      padding: 12px 27px;
+      font-size: 14px;
+
+      &:hover {
+        box-shadow: 5px 5px 5px 0 rgba(black, 0.3);
+      }
     }
   }
 }
